--- a/pom.xml
+++ b/pom.xml
@@ -78,8 +78,13 @@
 
         <!--[project specific-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.9</java.version>
+        <java.version>11</java.version>
         <!--project specific]-->
+
+        <!--[dependencies versions-->
+        <dependency.testng.version>7.1.0</dependency.testng.version>
+        <dependency.cranberry-muffin.version>${project.version}</dependency.cranberry-muffin.version>
+        <!--dependencies versions]-->
 
         <!--[plugins versions-->
         <plugin.maven-checkstyle-plugin.version>2.17</plugin.maven-checkstyle-plugin.version>
@@ -92,17 +97,27 @@
         <plugin.maven-compiler-plugin.version>3.8.1</plugin.maven-compiler-plugin.version>
         <plugin.maven-jar-plugin.version>3.1.1</plugin.maven-jar-plugin.version>
         <plugin.maven-dependency-plugin.version>3.1.1</plugin.maven-dependency-plugin.version>
+        <plugin.maven-surefire-plugin.version>3.0.0-M3</plugin.maven-surefire-plugin.version>
         <!--plugins versions]-->
     </properties>
     <!--properties]-->
 
     <!--[dependencies-->
     <dependencies>
+        <!--[test-->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${dependency.testng.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!--test]-->
+
         <!--[cranberry project modules-->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>cranberry-muffin</artifactId>
-            <version>${project.version}</version>
+            <version>${dependency.cranberry-muffin.version}</version>
             <scope>provided</scope>
         </dependency>
         <!--cranberry project modules]-->
@@ -188,9 +203,9 @@
                                     </message>
                                 </requireMavenVersion>
                                 <requireJavaVersion>
-                                    <version>1.8, 1.8</version>
+                                    <version>11</version>
                                     <message>
-                                        Invalid Maven version. It should be 1.8
+                                        Invalid Maven version. It should, at least, be 11
                                     </message>
                                 </requireJavaVersion>
                             </rules>
@@ -276,7 +291,7 @@
                         <path>
                             <groupId>io.github.cranberry</groupId>
                             <artifactId>cranberry-muffin</artifactId>
-                            <version>${project.version}</version>
+                            <version>${dependency.cranberry-muffin.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
@@ -311,6 +326,27 @@
                 </configuration>
             </plugin>
             <!--packaging to jar]-->
+
+            <!--[testing-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${plugin.maven-surefire-plugin.version}</version>
+                <configuration>
+                    <reportFormat>plain</reportFormat>
+                    <parallel>methods</parallel>
+                    <threadCount>12</threadCount>
+                    <systemPropertyVariables>
+                        <jacoco-agent.destfile>**/jacoco.exec</jacoco-agent.destfile>
+                    </systemPropertyVariables>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>
+                            ${project.basedir}/src/test/resources/cranberry_data_test_suite.xml
+                        </suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+            <!--testing]-->
         </plugins>
         <!--build general]-->
 
