--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -82,7 +82,7 @@
         <!--project specific]-->
 
         <!--[dependencies versions-->
-        <dependency.testng.version>7.1.0</dependency.testng.version>
+        <dependency.testng.version>7.4.0</dependency.testng.version>
         <dependency.cranberry-muffin.version>${project.version}</dependency.cranberry-muffin.version>
         <!--dependencies versions]-->
 
@@ -97,7 +97,8 @@
         <plugin.maven-compiler-plugin.version>3.8.1</plugin.maven-compiler-plugin.version>
         <plugin.maven-jar-plugin.version>3.1.1</plugin.maven-jar-plugin.version>
         <plugin.maven-dependency-plugin.version>3.1.1</plugin.maven-dependency-plugin.version>
-        <plugin.maven-surefire-plugin.version>3.0.0-M3</plugin.maven-surefire-plugin.version>
+        <plugin.maven-surefire-plugin.version>3.0.0-M5</plugin.maven-surefire-plugin.version>
+        <plugin.maven-resources-plugin.version>3.1.0</plugin.maven-resources-plugin.version>
         <!--plugins versions]-->
     </properties>
     <!--properties]-->
@@ -195,7 +196,7 @@
                         </goals>
                         <configuration>
                             <rules>
-                                <banDuplicatePomDependencyVersions />
+                                <banDuplicatePomDependencyVersions/>
                                 <requireMavenVersion>
                                     <version>3.3.1,</version>
                                     <message>
@@ -258,26 +259,6 @@
             </plugin>
             <!--reporting code coverage]-->
 
-            <!--[reporting git branch info-->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>buildnumber-maven-plugin</artifactId>
-                <version>${plugin.buildnumber-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>create</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <doCheck>false</doCheck>
-                    <doUpdate>false</doUpdate>
-                </configuration>
-            </plugin>
-            <!--reporting git branch info]-->
-
             <!--[compiling source-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -305,6 +286,26 @@
                 <version>${plugin.maven-clean-plugin.version}</version>
             </plugin>
             <!--cleaning target]-->
+
+            <!--[reporting git branch info-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>${plugin.buildnumber-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <doCheck>false</doCheck>
+                    <doUpdate>false</doUpdate>
+                </configuration>
+            </plugin>
+            <!--reporting git branch info]-->
 
             <!--[packaging to jar-->
             <plugin>
@@ -347,6 +348,30 @@
                 </configuration>
             </plugin>
             <!--testing]-->
+
+            <!--[managing resources-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>${plugin.maven-resources-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>copy-classes-to-test-module</id>
+                        <goals>
+                            <goal>testResources</goal>
+                        </goals>
+                        <configuration>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/target/classes</directory>
+                                </resource>
+                            </resources>
+                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--managing resources]-->
         </plugins>
         <!--build general]-->
 
