--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <groupId>io.github.ololx.cranberry</groupId>
     <artifactId>cranberry-examples</artifactId>
     <version>${revision}${sha1}${changelist}</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <!--artifact]-->
 
     <!--[info-->
